fix: we now only add -g flag to Java source types
Before it would get added to Groovy and Kotlin as well.

Fixes jbangdev#1656